<resources>
    <string name="app_name">Contact List</string>
    <string name="name">Name<font color="#ff0000" size="15"><sup>*</sup></font></string>
    <string name="hintName"><i>name</i></string>
    <string name="dob">Day of Birth<font color="#ff0000" size="15"><sup>*</sup></font></string>
    <string name="hintDob"><i>dd/mm/yyyy</i></string>
    <string name="email">Email<font color="#ff0000" size="15"><sup>*</sup></font></string>
    <string name="hintEmail"><i>email@email.com</i></string>
    <string name="phone">Phone Number<font color="#ff0000" size="15"><sup>*</sup></font></string>
    <string name="hintPhone"><i>xxxx.xxx.xxx</i></string>
    <string name="avatar">Avatar<font color="#ff0000" size="15"><sup>*</sup></font></string>
    <string name="delete"><font color='#ff2400'>Delete</font></string>
    <string name="delete_all"><font color='#ff2400'>Delete All Contact</font></string>
    <string name="delete_1"><font color='#ff2400'>Delete Contact</font></string>
</resources>